tests/ui/impl-trait/precise-capturing/ordering.stderr
error[E0391]: cycle detected when computing generics of `ordering`
  --> $DIR/ordering.rs:12:1
   |
LL | fn ordering<'a, T>() -> impl Sized + use<T, 'a> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires looking up a named region...
  --> $DIR/ordering.rs:12:1
   |
LL | fn ordering<'a, T>() -> impl Sized + use<T, 'a> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...which requires resolving lifetimes...
  --> $DIR/ordering.rs:12:1
   |
LL | fn ordering<'a, T>() -> impl Sized + use<T, 'a> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires computing generics of `ordering`, completing the cycle
note: cycle used when checking that `ordering` is well-formed
  --> $DIR/ordering.rs:12:1
   |
LL | fn ordering<'a, T>() -> impl Sized + use<T, 'a> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
